--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "winston": "^3.17.0"
   }
